--- a/P004597.opf/meta.yml
+++ b/P004597.opf/meta.yml
@@ -1,8 +1,8 @@
-id: opecha:P004597
+id: P004597
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG17587
   title: གུ་རུ་དྲག་དམར་གྱི་འཕྲིན་གཞུང་དྲེགས་པ་ཟིལ་གནོན་དང་། དབང་ཆོག་མཐོང་བ་རང་གྲོལ།
     དབྱངས་ཡིག་ཚངས་དབྱངས་སེམས་ཉིད་རོལ་མཚོ་བཅས།
-  volume: ''
   author: ''
+  volumes: {}
