--- a/P004597.opf/meta.yml
+++ b/P004597.opf/meta.yml
@@ -5,4 +5,9 @@ source_metadata:
   title: གུ་རུ་དྲག་དམར་གྱི་འཕྲིན་གཞུང་དྲེགས་པ་ཟིལ་གནོན་དང་། དབང་ཆོག་མཐོང་བ་རང་གྲོལ།
     དབྱངས་ཡིག་ཚངས་དབྱངས་སེམས་ཉིད་རོལ་མཚོ་བཅས།
   author: ''
-  volumes: {}
+  volumes:
+    34b419ff5ab246bea7e39bc61307b802:
+      image_group_id: I1KG17959
+      title: ''
+      volume_number: 1
+      total_pages: 112
