--- a/P004597.opf/layers/v001/Pagination.yml
+++ b/P004597.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 699a40ea39d54835835e3c21ce52cff4
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   7c8c0b0bbfd8498c8de85c6d5528091c:
