--- a/P004597.opf/meta.yml
+++ b/P004597.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P004597
 initial_creation_type: ocr
+created_at: 30/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W1KG17587
   title: གུ་རུ་དྲག་དམར་གྱི་འཕྲིན་གཞུང་དྲེགས་པ་ཟིལ་གནོན་དང་། དབང་ཆོག་མཐོང་བ་རང་གྲོལ།
